syntax = "proto2";

import "pyatv/protocols/mrp/protobuf/ProtocolMessage.proto";
import "pyatv/protocols/mrp/protobuf/NowPlayingInfo.proto";
import "pyatv/protocols/mrp/protobuf/PlaybackQueue.proto";
import "pyatv/protocols/mrp/protobuf/SupportedCommands.proto";
import "pyatv/protocols/mrp/protobuf/PlaybackQueueCapabilities.proto";
import "pyatv/protocols/mrp/protobuf/PlayerPath.proto";
import "pyatv/protocols/mrp/protobuf/PlaybackQueueRequestMessage.proto";
import "pyatv/protocols/mrp/protobuf/Common.proto";

extend ProtocolMessage {
  optional SetStateMessage setStateMessage = 9;
}

message SetStateMessage {
  optional NowPlayingInfo nowPlayingInfo = 1;
  optional SupportedCommands supportedCommands = 2;
  optional PlaybackQueue playbackQueue = 3;
  optional string displayID = 4;
  optional string displayName = 5;
  optional PlaybackState.Enum playbackState = 6;
  optional PlaybackQueueCapabilities playbackQueueCapabilities = 8;
  optional PlayerPath playerPath = 9;
  optional PlaybackQueueRequestMessage request = 10;
  optional double playbackStateTimestamp = 11;
}
